Revert "Feat(FE): Catálogo especies y razas por especie.RFG-104"
This reverts commit cae225c48478e3b33bb82f65671e106c06616c59.
